--- a/footer.html
+++ b/footer.html
@@ -43,7 +43,13 @@
                 <a href="#">Gynaecology</a>
                 <a href="#">Heart and Lung Transplant</a>
             </div>
-            <div>
+            <div class="footer-heading footer-4">
+                <h2>CONTACT US</h2>
+                <a href="#">Post a Query</a>
+                <a href="#">Consult a Doctor</a>
+                <a href="#">Book Physical Appointment</a>
+                <a href="#">Give Your Feedback</a>
+                <h4>Follow Us On Social Media</h4>
                 <ul class="socials">
                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
